theme-anomaly MDL-22914 Fixed up minor rounded corner alignment issues in anomaly.

--- a/theme/anomaly/style/browser.css
+++ b/theme/anomaly/style/browser.css
@@ -15,8 +15,8 @@
 
 #page-footer {position:relative;}
 #page-footer .rounded-corner {position:absolute;background-image:url([[pix:theme|corners_header]]);clear:both;}
-#page-footer .rounded-corner.bottom-left {background-position:0px 11px;bottom:0px;left:0px;float:left;}
-#page-footer .rounded-corner.bottom-right {background-position:11px 11px;bottom:0px;right:-1px;float:right;}
+#page-footer .rounded-corner.bottom-left {background-position:0 11px;bottom:0;left:0;float:left;}
+#page-footer .rounded-corner.bottom-right {background-position:11px 11px;bottom:0;right:0;float:right;}
 
 .block {border-width:0px;background-color:white;}
 .block .corner-box {border:1px solid #C8C9C7;margin-bottom:10px;padding-bottom:10px;background-color:#E3E3E3;}
@@ -37,25 +37,33 @@
  * Chrome:          body.safari
  * Safari:          body.safari
  */
+.opera .rounded-corner.top-left,
+.opera .rounded-corner.top-right,
+.opera .rounded-corner.bottom-left,
+.opera .rounded-corner.bottom-right,
 .safari .rounded-corner.top-left,
 .safari .rounded-corner.top-right,
 .safari .rounded-corner.bottom-left,
-.safari .rounded-corner.bottom-right
+.safari .rounded-corner.bottom-right,
 .gecko .rounded-corner.top-left,
 .gecko .rounded-corner.top-right,
 .gecko .rounded-corner.bottom-left,
 .gecko .rounded-corner.bottom-right {background-image:none;display:none;}
 
+.opera .block .corner-box,
 .safari .block .corner-box,
-.gecko .block .corner-box {-webkit-border-radius: 10px;-moz-border-radius: 10px;}
+.gecko .block .corner-box {-webkit-border-radius: 10px;-moz-border-radius: 10px;border-radius: 10px;}
 
+.opera .block .corner-box .header,
+.opera #page-header,
 .safari .block .corner-box .header,
 .safari #page-header,
 .gecko .block .corner-box .header,
-.gecko #page-header {-moz-border-radius: 10px 10px 0px 0px;-webkit-border-top-left-radius:10px;-webkit-border-top-right-radius:10px;}
+.gecko #page-header {-moz-border-radius: 10px 10px 0px 0px;-webkit-border-top-left-radius:10px;-webkit-border-top-right-radius:10px;border-top-left-radius:10px;border-top-right-radius:10px;}
 
+.opera #page-footer,
 .safari #page-footer,
-.gecko #page-footer {-moz-border-radius: 0px 0px 10px 10px;-webkit-border-bottom-left-radius:10px;-webkit-border-bottom-right-radius:10px;}
+.gecko #page-footer {-moz-border-radius: 0px 0px 10px 10px;-webkit-border-bottom-left-radius:10px;-webkit-border-bottom-right-radius:10px;border-bottom-left-radius:10px;border-bottom-right-radius:10px;}
 
 .gecko .forumpost,
 .gecko .forumpost .side {-moz-border-radius-bottomleft:20px}
